fix add instance grid gap

--- a/pmm-app/src/pmm-add-instance-app-panel/AddInstance/AddRemoteInstance/AddRemoteInstance.scss
+++ b/pmm-app/src/pmm-add-instance-app-panel/AddInstance/AddRemoteInstance/AddRemoteInstance.scss
@@ -13,6 +13,7 @@
       grid-template-columns: 1fr 1fr;
       width: 100%;
       margin-bottom: 1em;
+      grid-gap: 1em;
 
       .full-row {
         grid-column: 1 / 3;
